00grafana-ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "grafana-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/subnets: subnet-0af346f42f67f964c, subnet-0020cc1e095921d4d, subnet-065ed34ac8c9a8933
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  labels:
    app: alb-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: grafana
          servicePort: 80
